// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OE - Offcanvas renders correctly 1`] = `
<jest>
  <div
    class="offcanvas offcanvas-bottom"
    id="offcanvasExample"
    tabindex="-1"
  >
    <div
      class="offcanvas-header"
    >
      <h4
        class="offcanvas-title bcl-heading"
      >
        An offcanvas title
      </h4>
      <button
        class="btn-close text-reset"
        data-bs-dismiss="offcanvas"
        type="button"
      />
    </div>
    <div
      class="offcanvas-body"
    >
      An interesting content for this offcanvas
    </div>
  </div>
</jest>
`;

exports[`OE - Offcanvas renders correctly with body scroll support 1`] = `
<jest>
  <div
    class="offcanvas offcanvas-bottom"
    data-bs-scroll="true"
    id="offcanvasExample"
    tabindex="-1"
  >
    <div
      class="offcanvas-header"
    >
      <h4
        class="offcanvas-title bcl-heading"
      >
        An offcanvas title
      </h4>
      <button
        class="btn-close text-reset"
        data-bs-dismiss="offcanvas"
        type="button"
      />
    </div>
    <div
      class="offcanvas-body"
    >
      An interesting content for this offcanvas
    </div>
  </div>
</jest>
`;

exports[`OE - Offcanvas renders correctly without backdrop 1`] = `
<jest>
  <div
    class="offcanvas offcanvas-bottom"
    data-bs-backdrop="false"
    id="offcanvasExample"
    tabindex="-1"
  >
    <div
      class="offcanvas-header"
    >
      <h4
        class="offcanvas-title bcl-heading"
      >
        An offcanvas title
      </h4>
      <button
        class="btn-close text-reset"
        data-bs-dismiss="offcanvas"
        type="button"
      />
    </div>
    <div
      class="offcanvas-body"
    >
      An interesting content for this offcanvas
    </div>
  </div>
</jest>
`;

exports[`OE - Offcanvas renders correctly without close button 1`] = `
<jest>
  <div
    class="offcanvas offcanvas-bottom"
    id="offcanvasExample"
    tabindex="-1"
  >
    <div
      class="offcanvas-body"
    >
      An interesting content for this offcanvas
    </div>
  </div>
</jest>
`;

exports[`OE - Offcanvas renders correctly without title 1`] = `
<jest>
  <div
    class="offcanvas offcanvas-bottom"
    id="offcanvasExample"
    tabindex="-1"
  >
    <div
      class="offcanvas-header"
    >
      <button
        class="btn-close text-reset"
        data-bs-dismiss="offcanvas"
        type="button"
      />
    </div>
    <div
      class="offcanvas-body"
    >
      An interesting content for this offcanvas
    </div>
  </div>
</jest>
`;

exports[`OE - Offcanvas renders correctly without title and close button 1`] = `
<jest>
  <div
    class="offcanvas offcanvas-bottom"
    id="offcanvasExample"
    tabindex="-1"
  >
    <div
      class="offcanvas-body"
    >
      An interesting content for this offcanvas
    </div>
  </div>
</jest>
`;
